# game-of-life-kata

./: README.md  game-of-life.cabal
src/: GameOfLife.hs
test/: GameOfLifeTest.hs
