cabal-version:      2.4
name:               GameOfLife
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: GameOfLife

license:            Unlicense
author:             JDanielEscanez
maintainer:         jdanielescanez@gmail.com

library 
    exposed-modules:  
      GameOfLife
    build-depends:    base ^>= 4.14.3.0,
                      matrix ^>= 0.3.6.1
    hs-source-dirs:   src
    default-language: Haskell2010

Test-Suite test
    type:               exitcode-stdio-1.0
    main-is:            GameOfLifeTest.hs
    hs-source-dirs:     test, src
    other-modules:      GameOfLife
    build-depends:      base ^>= 4.14.3.0,
                        hspec,
                        matrix ^>= 0.3.6.1
    default-language:   Haskell2010